<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>george.personal</groupId>
	<artifactId>ocp-study</artifactId>
	<packaging>pom</packaging>
	<version>1.0-SNAPSHOT</version>

	<properties>
		<java.version>11</java.version>
	</properties>

	<modules>
		<module>chapter1-advanced-class-design</module>
		<module>chapter2-design-patterns-and-principles</module>
		<module>chapter3-generics-and-collections</module>
        <module>chapter4-functional-programming</module>
        <module>chapter5-dates-strings-and-localization</module>
        <module>chapter6-exceptions-and-assertions</module>
        <module>chapter7-concurrency</module>
        <module>chapter8-io</module>
        <module>chapter9-nio2</module>
        <module>chapter10-jdbc</module>
		<module>ocp11-modules-chapter11-oca</module>
		<module>ocp11-modules-chapter6-ocp</module>
	</modules>


	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
